<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgentDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AgentDroid</string>
    <string name="action_settings">Settings</string>
    
    
    
    <!-- TAB 1 - Config Agent  -->
    <string name="communityRO">Community Read-Only:</string>
    <string name="communityRW">Community Read-Write:</string>
    <string name="communityDefault">Public</string>
    <string name="port">Port:</string>
    <string name="portDefault">1161</string>
    <string name="version">Version:</string>
    <string name="snmp1">SNMPv1</string>
    <string name="snmp2">SNMPv2c</string>
    <string name="switchService">Service SNMP:</string>
    <string name="snmpServiceOn">Service SNMP ON</string>
    <string name="snmpServiceOff">Service SNMP OFF</string>
    <string name="enterpriseOID">Enterprise OID:</string>
    <string name="retries">Retries:</string>
    <string name="retriesDefault">3</string>
    <string name="timeOut">TimeOut (ms):</string>
    <string name="timeOutDefault">1500</string>
    
    
    
    <!-- TAB 2 y 3 - Service Send Traps  -->
    <string name="dtsIpAddress">Destination IP Address:</string>
    <!-- 
    <string name="port">Port:</string> 
    -->
    <string name="portDefaultTraps">162</string>
     
    <string name="community">Community:</string>
   	<!-- 
   	<string name="communityDefault">Public</string>
     -->
    <string name="trapType">Trap Type:</string>
    <string name="specificTrap">Specific Trap:</string>
    <string name="bTraps">Send Trap</string>
    <string name="selectOpcion">Select an Option</string>
    <string name="trapOID">Trap OID</string>
    <string name="description">Description</string>
    <string name="dataType">Data Type</string>
    <string name="bInform">Send Inform</string>
     
    
    <!-- TAB 3 - System Group  -->
    <string name="valueNull">null</string>
    
    <string name="systemGroup">System Group (.1.3.6.1.2.1.1):</string>
    <string name="sysDescr">sysDescr (.1):</string>
    <string name="sysObjectID">sysObjectID (.2):</string>
    <string name="sysUpTime">sysUpTime (.3):</string>
    <string name="sysContact">sysContact (.4):</string>
    <string name="sysName">sysName (.5):</string>
    <string name="sysLocation">sysLocation (.6):</string>
    <string name="sysServices">sysServices (.7):</string>
    
    <string name="physical">physical</string>
	<string name="datalink_subnetwork">datalink/subnetwork</string>
	<string name="internet">internet</string>
	<string name="end_to_end">end-to-end</string>
	<string name="applications">applications</string>
	<string name="bSave">Save</string>
	
	
	<string name="vacio"></string>
	
     
        

</resources>