<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgentDroid" >

        <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
					
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community" />
                    
         			<EditText
         			    android:id="@+id/editText1"
         			    android:layout_width="match_parent"
         			    android:layout_height="wrap_content"
         			    android:text="@string/communityDefault"
         			    android:ems="10"
         			    android:inputType="text" />

         			<TextView
         			    android:id="@+id/textView3"
         			    android:layout_width="wrap_content"
         			    android:layout_height="wrap_content"
         			    android:text="@string/port" />

         			<EditText
         			    android:id="@+id/editText2"
         			    android:layout_width="wrap_content"
         			    android:layout_height="wrap_content"
         			    android:text="@string/portDefault"
         			    android:ems="10"
         			    android:inputType="number" >

         			    <requestFocus />
         			</EditText>

         			<TextView
         			    android:id="@+id/textView2"
         			    android:layout_width="wrap_content"
         			    android:layout_height="wrap_content"
         			    android:text="@string/version" />

         			<RadioGroup
         			    android:id="@+id/radioGroup1"
         			    android:layout_width="wrap_content"
         			    android:layout_height="wrap_content" >

         			    <RadioButton
         			        android:id="@+id/radio0"
         			        android:layout_width="wrap_content"
         			        android:layout_height="wrap_content"
         			        android:checked="true"
         			        android:text="@string/snmp1" />

         			    <RadioButton
         			        android:id="@+id/radio1"
         			        android:layout_width="wrap_content"
         			        android:layout_height="wrap_content"
         			        android:text="@string/snmp2" />
         			</RadioGroup>

         			<ToggleButton
         			    android:id="@+id/toggleButton1"
         			    android:layout_width="wrap_content"
         			    android:layout_height="wrap_content"
         			    android:textOn="@string/button_ON"
         			    android:textOff="@string/button_OFF"/>
                
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:text="@string/bTraps" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
					android:orientation="vertical" >
                    
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/systemGroup" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>